/* Copyright 2022 Mithril Security. All rights reserved.
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
*   http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing permissions and
* limitations under the License. */

syntax = "proto3";
package remote_torch;

message ReferenceRequest {
    bytes hash = 1;
}

message ReferenceResponse {
    bytes hash = 1;
    string name = 2;
    string description = 3;
    bytes meta = 4;
}

message RunRequest {
    string uuid = 1;
}

message RunResponse {
    string uuid = 1;
    bytes model = 2;
    bytes dataset = 3;
}

message Chunk {
    bytes data = 1;
    string name = 2;
    string description = 3;
    string license = 4;
    ClientInfo client_info = 5;
    bytes meta = 6;
}

message Empty {}

message TrainRequest {
    bytes model = 1;
    bytes dataset = 2;
    int32 batch_size = 3;
    int32 epochs = 4;
    string device = 5;
    string metric = 6;
    float eps = 7;
    float max_grad_norm = 8;
    float metric_eps = 9;
    
    oneof optimizer {
        // The type of optimizer to be used during training.
        // Currently, only SGD and Adam are supported.
        SGD sgd = 10;
        Adam adam = 11;
    }

    message SGD {
        // SGD optimizer object.

        float learning_rate = 1;
        float weight_decay = 2;
        float momentum = 3;
        float dampening = 4;
        bool nesterov = 5;
    }

    message Adam {
        // Adam optimizer object.

        float learning_rate = 1;
        float beta_1 = 2;
        float beta_2 = 3;
        float epsilon = 4;
        float weight_decay = 5;
        bool amsgrad = 6;
    }
}

message TestRequest {
    bytes model = 1;
    bytes dataset = 2;
    int32 batch_size = 3;
    string device = 4;
    string metric = 5;
    float metric_eps = 6;
}

message ReferenceListResponse {
    repeated ReferenceResponse list = 1;
}

message ListResponse {
    repeated string list = 1;
}

message MetricResponse {
    float value = 1;
    float uncertainty = 2;
    int32 batch = 3;
    int32 epoch = 4;
    int32 nb_epochs = 5;
    int32 nb_batches = 6;
}

message ClientInfo {
    string uid = 1;
    string platform_name = 2;
    string platform_arch = 3;
    string platform_version = 4;
    string platform_release = 5;
    string user_agent = 6;
    string user_agent_version = 7;
}

message ChallengeResponse {
    bytes value = 1;
}

service RemoteTorch {
    rpc SendDataset (stream Chunk) returns (ReferenceResponse) {}
    rpc SendModel (stream Chunk) returns (ReferenceResponse) {}
    rpc FetchDataset (ReferenceRequest) returns (stream Chunk) {}
    rpc FetchModel (ReferenceRequest) returns (stream Chunk) {}
    rpc DeleteDataset (ReferenceRequest) returns (Empty) {}
    rpc DeleteModel (ReferenceRequest) returns (Empty) {}
    rpc AvailableModels(Empty) returns (ReferenceListResponse) {}
    rpc AvailableDatasets(Empty) returns (ReferenceListResponse) {}
    rpc AvailableDevices(Empty) returns (ListResponse) {}
    rpc AvailableOptimizers(Empty) returns (ListResponse) {}
    rpc Train (TrainRequest) returns (RunResponse) {}
    rpc Test (TestRequest) returns (RunResponse) {}
    rpc GetMetric (RunRequest) returns (MetricResponse) {}
    rpc GetChallenge (Empty) returns (ChallengeResponse) {}
}